--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
+  <h2> Tämä on minun ensimmäinen sivu!!</h2>
+  <p> testailen eri menetelmiä<p>
 
 </body>
 </html> 
