--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
   <h2> Tämä on minun ensimmäinen sivu!!</h2>
   <p> testailen eri menetelmiä<p>
+  <h2>Menen pääsiäisenä Yyteriin</h2>
+  <p> siellä tulee olemaan mukavaa <br>
+    Toivottavasti kelit suosivat </p>
 
 </body>
 </html> 
