--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      h1 {
+      color: green; 
+      }
+      #paasiainen {
+        color: red;
+      }
+      
+      
+      <style>
 <body>
 
 <h1>This is my first HTML page in Laurea Foundations of Web Development course.</h1>
-  <h2> Tämä on minun ensimmäinen sivu!!</h2>
+  <h2 id="paasiainen"> Tämä on minun ensimmäinen sivu!!</h2>
   <p> testailen eri menetelmiä<p>
   
-  <h2>Menen pääsiäisenä Yyteriin</h2>
+  <h2>Olin pääsiäisenä Yyterissä</h2>
   
   <p> Siellä tulee olemaan mukavaa <br>
     Toivottavasti kelit suosivat </p>
