--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   
   <h2>Olin pääsiäisenä Yyterissä</h2>
   
-  <p> Siellä tulee olemaan mukavaa <br>
-    Toivottavasti kelit suosivat </p>
+  <p> Siellä oli mukavaa <br>
+    kelit suosivat </p>
   
 
 </body>
