--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       p {
       color: #fafbfc;
         font-size: 20px;
+        style="text-shadow: 2px 2px 3px ;">Nulla facilisi. Mauris sapien massa
         }
       h2 {
       color: #eb6cb8;
