--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <h2 id="otsikko1"> Kalaherkut Nygren</h2>
   <p>Tällä sivulla päivitetty versio Perjantai Myysseistä. <p>
   
-  <img src"https://images.app.goo.gl/5XjgzdkHM9J92L5c8" alt="Kalaherkut" width=203>
+  <img src="https://images.app.goo.gl/5XjgzdkHM9J92L5c8" alt="Kalaherkut" width=203>
   
   <h2>Kalaherkut Nygren Perjantai myyssi sisältää:</h2>
   
